fixes a few instances of using 'center' rather than 'middle' for vertical-align properties

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,17 +298,17 @@ body {
 
 .but-left {
   text-align: left;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .but-right {
   text-align: right;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .but-today {
   text-align: right;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .but-switch-view input {
